[package]
name = "sftp"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
thiserror = "1"
zerocopy = "0.3.0"

[dev-dependencies]
anyhow = "1"
pico-args = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"
whoami = "1"
