[package]
name = "sftp"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = [ "io-util", "sync" ] }

[dev-dependencies]
anyhow = "1"
pico-args = "0.3"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.1"
whoami = "1"
